Added favorite food img

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<p>I'm hosted with GitHub Pages.</p>
 		<p>My name is Giovanni Paulino. I used to go to Monroe-Woodbury High School, which is located in Central Valley, New York. My main hobby is playing video games, but I like to play the piano really de-stress. I also love reading, in particular I've started reading the Lunar Chronicles. I've always to try skydiving, it seems like fun, but I wonder where you land afterwards. Do you rent an entire field to land in? Because it seems like you wouldn't be too accurate when jumping out of a plain.</p>
 		<a href=https://www.se.rit.edu/~swen-101/00/index.html>SWEN 101 Website</a>
-
+		<img src='Favorite Food.jpg' alt="Favorite Food">
 	</body>
 </html>
 
